--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ Description: Provide functions for single-cell data clustering analysis, with
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
