--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Description: Provides functions for single-cell data clustering analysis, with
     analysis in a manner that takes into account the finer shape of the clusters
     and how this shape differs between them.
 License: MIT + file LICENSE
-Depends: R (>= 4.2.0)
+Depends: R (>= 4.3.0), Matrix
 Imports: 
     pheatmap,
     mclust,
@@ -28,16 +28,19 @@ Imports:
     Hmisc,
     viridis,
     dplyr,
-    magrittr
+    magrittr,
+    expm
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Suggests: 
-    testthat,
+    testthat (>= 3.0.0),
     rmarkdown,
     tidyr,
     DescTools,
-    readr
+    readr,
+    mockr
 URL: https://github.com/laaeett/clustsimlR
 BugReports: https://github.com/laaeett/clustsimlR/issues
+Config/testthat/edition: 3
