--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
@@ -29,4 +30,3 @@ importFrom(mclust,mclustICL)
 importFrom(pheatmap,pheatmap)
 importFrom(stats,princomp)
 importFrom(stats,screeplot)
-importFrom(viridis,scale_fill_viridis)
