--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,6 @@ Imports:
     ggplot2,
     Rtsne,
     Hmisc,
-    viridis,
     dplyr,
     magrittr,
     expm
@@ -40,7 +39,8 @@ Suggests:
     tidyr,
     DescTools,
     readr,
-    mockr
+    mockr,
+    viridis,
 URL: https://github.com/laaeett/clustsimlR
 BugReports: https://github.com/laaeett/clustsimlR/issues
 Config/testthat/edition: 3
