--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(intercluster_dist)
 export(plot_GMM_clusters)
 export(plot_PC)
 export(plot_loss)
+import(Matrix)
 importFrom(Hmisc,impute)
 importFrom(Rtsne,Rtsne)
 importFrom(dplyr,mutate_all)
