--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(grid,grid.text)
 importFrom(magrittr,"%>%")
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
