--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     magrittr,
     expm,
     grid,
-    shiny
+    shiny,
+    bslib
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
