--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,9 @@ Imports:
     expm,
     grid,
     shiny,
-    bslib
+    bslib,
+    shinycssloaders,
+    shinyalert
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
