--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(intercluster_dist)
 export(plot_GMM_clusters)
 export(plot_PC)
 export(plot_loss)
+export(run_clustsimlR)
 import(Matrix)
 importFrom(Hmisc,impute)
 importFrom(Rtsne,Rtsne)
@@ -29,5 +30,6 @@ importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
 importFrom(mclust,mclustICL)
 importFrom(pheatmap,pheatmap)
+importFrom(shiny,runApp)
 importFrom(stats,princomp)
 importFrom(stats,screeplot)
