--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     shiny,
     bslib,
     shinycssloaders,
-    shinyalert
+    shinyalert,
+    DT
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
